--- a/Web/pages/Contacto.html
+++ b/Web/pages/Contacto.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
-    <script src="../js/bootstrap.bundle.min.js">
-
-    </script>
+    <title>Hotel Quiu</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="../js/bootstrap.bundle.min.js"></script>
 
 </head>
 <body>
@@ -32,19 +34,19 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
+                        <li class="nav-item scale-up-center">
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item scale-up-center">
                             <a class="nav-link" href="./Hotel.html">Hotel</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item scale-up-center">
                             <a class="nav-link" href="./Habitaciones-y-precios.html">Habitaciones y Precios</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item scale-up-center">
                             <a class="nav-link" href="./Reserva.html">Reserva</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item scale-up-center">
                             <a class="nav-link" href="./Contacto.html">Contacto</a>
                         </li>
                     </ul>
@@ -54,56 +56,35 @@
     </header>
     <br>
     <main>
-        <div class="container mb-2 lead">
+        <div class="container mb-2">
             <section class="principal">
-                <div class="row">
-                    <div class="col-12">
-                    <div id="carousel" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="../imagenes/imagencordoba1.jpeg" class="d-block w-100" alt="Slide 1"/>
+                <div class="get-in-touch">
+                    <h1 class="title lead">Contactanos</h1>
+                    <form class="contact-form row">
+                        <div class="form-field col-lg-6">
+                           <input id="nombre" class="input-text js-input" type="text" required>
+                           <label class="label" for="nombre">Nombre</label>
                         </div>
-                        <div class="carousel-item">
-                            <img src="../imagenes/imagencordoba2.jpg" class="d-block w-100" alt="Slide 2"/>
+                        <div class="form-field col-lg-6 ">
+                            <input id="apellido" class="input-text js-input" type="text" required>
+                            <label class="label" for="apellido">Apellido</label>
+                         </div>
+                        <div class="form-field col-lg-6 ">
+                           <input id="email" class="input-text js-input" type="email" required>
+                           <label class="label" for="email">E-mail</label>
                         </div>
-                        <div class="carousel-item">
-                            <img src="../imagenes/imagencordoba3.jpg" class="d-block w-100" alt="Slide 3"/>
+                        <div class="form-field col-lg-6 ">
+                           <input id="telefono" class="input-text js-input" type="number" required>
+                           <label class="label" for="telefono">Telefono</label>
                         </div>
+                        <div class="form-field col-lg-12">
+                           <input id="mensaje" class="input-text js-input" type="text" required>
+                           <label class="label" for="mensaje">Message</label>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev" >
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Atrás</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next" >
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Siguiente</span>
-                        </button>
-                    </div>
-                    </div>
-                </div>
-                    <div class="mb-3">
-                        <label for="nombre" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="nombre" placeholder="Ingrese su Nombre">
-                    </div>
-                    <div class="mb-3">
-                        <label for="Apellido" class="form-label">Apellido</label>
-                        <input type="text" class="form-control" id="Apellido" placeholder="Ingrese su Apellido">
-                    </div>
-                    <div class="mb-3">
-                        <label for="Telefono" class="form-label">Telefono</label>
-                        <input type="number" class="form-control" id="Telefono" placeholder="Ingrese su Telefono">
-                    </div>
-                    <div class="mb-3">
-                        <label for="correo electronico" class="form-label">Correo Electronico</label>
-                        <input type="email" class="form-control" id="correo electronico" placeholder="nombreapellido@ejemplo.com">
-                    </div>
-                    <div class="mb-3">
-                        <label for="comentario" class="form-label">Dudas y Consultas</label>
-                        <textarea class="form-control" id="comentario" rows="5  "></textarea>
-                    </div>
-                    <br>
-                <div>
-                    <button>Enviar</button>
+                        <div class="form-field col-lg-12">
+                           <input class="submit-btn" type="submit" value="Submit">
+                        </div>
+                    </form>
                 </div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2478.1589739074675!2d-64.18013608361981!3d-31.41755376870462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a29b8430ac1b%3A0xefb06247ea18e15c!2zQXYuIE1haXDDuiAyLCBYNTAwMCBJQkIsIEPDs3Jkb2Jh!5e0!3m2!1ses-419!2sar!4v1648582663832!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
@@ -114,17 +95,21 @@
     <br>
     <br>
     <br>
-    <footer>
-        <div class="lead">
-            <p>Quiu Cordoba</p>
-            <p>Avenida Cosito 1234</p>
-            <p>Tel: +54 351 123 - 4560</p>
-            <p>@: hotelquiucordoba@quiuhotels.com</p>
-            <span>© Hotel Riu  2022</span>
-        </div>
-        <div class="grid__hijo1">
-            <img src="../imagenes/LogoHotelQuiu.png" alt="Logo Hotel Quiu" width="50" height="50">
-        </div>
-    </footer>
+    <div class="footer-basic">
+        <footer>
+            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+            <ul class="list-inline">
+                <li class="list-inline-item scale-up-center"><a href="../index.html">Inicio</a></li>
+                <li class="list-inline-item scale-up-center"><a href="./Hotel.html">Hotel</a></li>
+                <li class="list-inline-item scale-up-center"><a href="./Habitaciones-y-precios.html">Habitaciones y Precios</a></li>
+                <li class="list-inline-item scale-up-center"><a href="./Reserva.html">Reserva</a></li>
+                <li class="list-inline-item scale-up-center"><a href="./Contacto.html">Contacto</a></li>
+            </ul>
+            <p class="copyright">Hotel Quiu © 2022</p>
+        </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
