--- a/Web/pages/Habitaciones-y-precios.html
+++ b/Web/pages/Habitaciones-y-precios.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Habitaciones y precios</title>
-    <script src="../js/bootstrap.bundle.min.js">
-
-    </script>
+    <title>Hotel Quiu</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="../js/bootstrap.bundle.min.js"></script>
+
+</head>
     
 </head>
 <body>
@@ -22,33 +26,38 @@
                     <a class="navbar-brand" href="#">
                         <img src="../imagenes/LogoLargoSinFondo.png" alt="Logo Hotel Quiu">
                     </a>
-                    <button  class="navbar-toggler"  type="button"  data-bs-toggle="collapse"  data-bs-target="#navbar">
+                    <button 
+                        class="navbar-toggler" 
+                        type="button" 
+                        data-bs-toggle="collapse" 
+                        data-bs-target="#navbar" 
+                        >
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbar">
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="../index.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./Hotel.html">Hotel</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./Habitaciones-y-precios.html">Habitaciones y Precios</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./Reserva.html">Reserva</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./Contacto.html">Contacto</a>
-                            </li>
-                        </ul>
+                      <ul class="navbar-nav ms-auto">
+                        <li class="nav-item scale-up-center">
+                            <a class="nav-link" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item scale-up-center">
+                            <a class="nav-link" href="./Hotel.html">Hotel</a>
+                        </li>
+                        <li class="nav-item scale-up-center">
+                            <a class="nav-link" href="./Habitaciones-y-precios.html">Habitaciones y Precios</a>
+                        </li>
+                        <li class="nav-item scale-up-center">
+                            <a class="nav-link" href="./Reserva.html">Reserva</a>
+                        </li>
+                        <li class="nav-item scale-up-center">
+                            <a class="nav-link" href="./Contacto.html">Contacto</a>
+                        </li>
+                    </ul>
                     </div>
                 </div>
             </nav>
         </header>
         <br>
-    <div class="container">
+        <div class="container">
         <main class="row mt-5">
             <section class="col col-lg-10">
               <h1 class="display-1 mb-5">Nuestras habitaciones</h1>
@@ -206,19 +215,22 @@
         <br>
         <br>
         <br>
+       </div>
+        <div class="footer-basic">
+          <footer>
+              <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+              <ul class="list-inline">
+                <li class="list-inline-item scale-up-center"><a href="../index.html">Inicio</a></li>
+                <li class="list-inline-item scale-up-center"><a href="./Hotel.html">Hotel</a></li>
+                <li class="list-inline-item scale-up-center"><a href="./Habitaciones-y-precios.html">Habitaciones y Precios</a></li>
+                <li class="list-inline-item scale-up-center"><a href="./Reserva.html">Reserva</a></li>
+                <li class="list-inline-item scale-up-center"><a href="./Contacto.html">Contacto</a></li>
+              </ul>
+              <p class="copyright">Hotel Quiu © 2022</p>
+          </footer>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+        </div>
 
-        <footer>
-            <div>
-                <p>Quiu Cordoba</p>
-                <p>Avenida Cosito 1234</p>
-                <p>Tel: +54 351 123 - 4560</p>
-                <p>@: hotelquiucordoba@quiuhotels.com</p>
-                <span>© Hotel Riu  2022</span>
-            </div>
-            <div class="grid__hijo1">
-                <img src="../imagenes/LogoHotelQuiu.png" alt="Logo Hotel Quiu" width="50" height="50">
-            </div>
-        </footer>
-    </div>
 </body>
 </html>
